force-app/main/default/objects/Seller__c/Seller__c.object-meta.xml
<CustomObject>
    <description>[a0K][Seller__c] Objeto que irá representar um vendedor.</description>
    <label>Vendedor</label>
    <nameField>
        <label>Nome do Vendedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>