force-app/main/default/objects/Seller__c/fields/CompanyTxt__c.field-meta.xml
<CustomField>
    <fullName>CompanyTxt__c</fullName>
    <label>Empresa</label>
    <length>4</length>
    <type>Text</type>
</CustomField>