force-app/main/default/objects/Seller__c/fields/CoordinatorEmailTxt__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorEmailTxt__c</fullName>
    <label>Coordenador e-mail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>