force-app/main/default/objects/Seller__c/fields/CoordinatorLkp__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordenador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vendedores1</relationshipName>
    <type>Lookup</type>
</CustomField>