force-app/main/default/objects/Seller__c/fields/CoordinatorNameTxt__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorNameTxt__c</fullName>
    <label>Nome do coordenador</label>
    <length>50</length>
    <type>Text</type>
</CustomField>