force-app/main/default/objects/Seller__c/fields/CoordinatorNumberNmb__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorNumberNmb__c</fullName>
    <label>Código do coordenador</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>