force-app/main/default/objects/Seller__c/fields/CoordinatorPhoneTxt__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorPhoneTxt__c</fullName>
    <label>Coordenador telefone</label>
    <length>14</length>
    <type>Text</type>
</CustomField>