force-app/main/default/objects/Seller__c/fields/CostCenterTxt__c.field-meta.xml
<CustomField>
    <fullName>CostCenterTxt__c</fullName>
    <label>Centro de custo</label>
    <length>15</length>
    <type>Text</type>
</CustomField>