force-app/main/default/objects/Seller__c/fields/HRAreaTxt__c.field-meta.xml
<CustomField>
    <fullName>HRAreaTxt__c</fullName>
    <label>Área RH</label>
    <length>4</length>
    <type>Text</type>
</CustomField>