force-app/main/default/objects/Seller__c/fields/ManagerEmailTxt__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmailTxt__c</fullName>
    <label>Gerente e-mail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>