force-app/main/default/objects/Seller__c/fields/ManagerLkp__c.field-meta.xml
<CustomField>
    <fullName>ManagerLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vendedores</relationshipName>
    <type>Lookup</type>
</CustomField>