force-app/main/default/objects/Seller__c/fields/ManagerNameTxt__c.field-meta.xml
<CustomField>
    <fullName>ManagerNameTxt__c</fullName>
    <label>Nome do gerente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>