force-app/main/default/objects/Seller__c/fields/ManagerNumberNmb__c.field-meta.xml
<CustomField>
    <fullName>ManagerNumberNmb__c</fullName>
    <label>Código do gerente</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>