force-app/main/default/objects/Seller__c/fields/ManagerPhoneTxt__c.field-meta.xml
<CustomField>
    <fullName>ManagerPhoneTxt__c</fullName>
    <label>Gerente telefone</label>
    <length>14</length>
    <type>Text</type>
</CustomField>