force-app/main/default/objects/Seller__c/fields/SalesOfficeLkp__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escritório de Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Vendedores</relationshipLabel>
    <relationshipName>Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>