force-app/main/default/objects/Seller__c/fields/SalesOfficeTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeTxt__c</fullName>
    <label>Escritório de vendas</label>
    <length>4</length>
    <type>Text</type>
</CustomField>