force-app/main/default/objects/Seller__c/fields/SalesOrganizationTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganizationTxt__c</fullName>
    <label>Organização vendas</label>
    <length>4</length>
    <type>Text</type>
</CustomField>