force-app/main/default/objects/Seller__c/fields/SellerEmailTxt__c.field-meta.xml
<CustomField>
    <fullName>SellerEmailTxt__c</fullName>
    <label>Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>