force-app/main/default/objects/Seller__c/fields/SellerNumberNmb__c.field-meta.xml
<CustomField>
    <fullName>SellerNumberNmb__c</fullName>
    <externalId>true</externalId>
    <label>Código do vendedor</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>