force-app/main/default/objects/Seller__c/fields/SellerPhoneTxt__c.field-meta.xml
<CustomField>
    <fullName>SellerPhoneTxt__c</fullName>
    <label>Telefone vendedor</label>
    <type>Phone</type>
</CustomField>