force-app/main/default/objects/Seller__c/fields/SubareaTxt__c.field-meta.xml
<CustomField>
    <fullName>SubareaTxt__c</fullName>
    <label>Subárea</label>
    <length>10</length>
    <type>Text</type>
</CustomField>