force-app/main/default/objects/Seller__c/fields/UserLkp__c.field-meta.xml
<CustomField>
    <fullName>UserLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>