force-app/main/default/objects/Seller__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CoordinatorNameTxt__c</columns>
    <columns>ManagerNameTxt__c</columns>
    <columns>SalesOrganizationTxt__c</columns>
    <filterScope>Everything</filterScope>
    <label>Vendedores</label>
</ListView>